добавил первые строчки

--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>Sky Mood</title>
 </head>
 <body>
-    <h1>Перевет!</h1>
+    <h1>SKY MOOD</h1>
+    <h4>Здесь ты получишь психологическую помочь онлайн!</h4>
 </body>
 </html>
