накидал шапку главной страницы

--- a/main.html
+++ b/main.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sky Mood</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>SKY MOOD</h1>
-    <h4>Здесь ты получишь психологическую помочь онлайн!</h4>
+    <div class="header">
+        <div class="head-text">
+            <h2 class="name">SKY MOOD</h2>
+            <ul>
+                <li>Для психологов</li>
+                <li>Для бизнеса</li>
+                <li>Сертификаты</li>
+                <li>Тесты</li>
+            </ul>
+            <ul>
+                <li>Вход</li>
+                <li>
+                    <a class="choose" href="https://neumann96.github.io/CV/">Выбрать психолога</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
