--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header">
-        <div class="head-text">
+    <header class="header">
+        <nav class="head-text">
             <h2 class="name">SKY MOOD</h2>
             <ul>
                 <li>Для психологов</li>
@@ -17,11 +17,19 @@
                 <li>Тесты</li>
             </ul>
             <ul>
-                <li>Вход</li>
                 <li>
-                    <a class="choose" href="https://neumann96.github.io/CV/">Выбрать психолога</a>
+                    <a class="enter" href="https://neumann96.github.io/CV/" target="_blank">Вход</a>
+                </li>
+                <li>
+                    <a class="choose" href="https://neumann96.github.io/CV/" target="_blank">Выбрать психолога</a>
                 </li>
             </ul>
+        </nav>
+    </header>
+
+    <div class="main">
+        <div class="main-text">
+            <h1>Консультации с психологом онлайн</h1>
         </div>
     </div>
 </body>
