привёл в порядок main текст

--- a/main.html
+++ b/main.html
@@ -29,8 +29,11 @@
 
     <div class="main">
         <div class="main-text">
-            <h1>Консультации с психологом онлайн</h1>
+            <h4>Консультации <br> с психологом онлайн:<br><span class="main-text-blue">повысить качество жизни</span></h4>
         </div>
+        <a class="choose_2" href="https://neumann96.github.io/CV/" target="_blank">Подобрать психолога</a>
     </div>
+
+    <img src="photo_1.jpg" alt="no">
 </body>
 </html>
