начал оформлять форму

--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
             </ul>
             <ul>
                 <li>
-                    <a class="enter" href="https://neumann96.github.io/CV/" target="_blank">Вход</a>
+                    <a class="enter" href="form.html" target="_blank">Вход</a>
                 </li>
                 <li>
-                    <a class="choose" href="https://neumann96.github.io/CV/" target="_blank">Выбрать психолога</a>
+                    <a class="choose" href="form.html" target="_blank">Выбрать психолога</a>
                 </li>
             </ul>
         </nav>
@@ -31,7 +31,7 @@
         <div class="main-text">
             <h4>Консультации <br> с психологом онлайн:<br><span class="main-text-blue">повысить качество жизни</span></h4>
         </div>
-        <a class="choose_2" href="https://neumann96.github.io/CV/" target="_blank">Подобрать психолога</a>
+        <a class="choose_2" href="form.html" target="_blank">Подобрать психолога</a>
     </div>
 
     <img src="photo_1.jpg" alt="no">
