grid элементы, анимация, ссылки

--- a/form.html
+++ b/form.html
@@ -9,13 +9,10 @@
 <body>
     <header class="header">
         <nav class="head-text">
-            <h2 class="name">SKY MOOD</h2>
+            <a href="main.html" class="name"><h2>SKY MOOD</h2></a>
             <ul>
                 <li>
-                    <a class="enter" href="form.html" target="_blank">Вход</a>
-                </li>
-                <li>
-                    <a class="choose" href="form.html" target="_blank">Выбрать психолога</a>
+                    <a class="choose" href="form.html">Выбрать психолога</a>
                 </li>
             </ul>
         </nav>
@@ -23,15 +20,16 @@
     <div class="form">
         <form action="">
                 <label>Введите своё имя: <br><input type="text" placeholder="Ваня" required></label>
-                <label>ДР<br><input type="date" required></label>
-                <label>Ваш пол<br><select name="Пол?">
+                <label>Дата рождения:<br><input type="date" required></label>
+                <label>Ваш пол:<br><select name="Пол?">
                     <option value="option1">Мужской</option>
                     <option value="option2">Женский</option>
                 </select>
                 </label>
-                <label>Почта<br><input type="email" placeholder="eshkere@skrrr.yo"></label>
-                <label>Телефон<br><input type="tel" placeholder="+7... ... .. .." required></label>
+                <label>Электронная Почта:<br><input type="email" placeholder="eshkere@skrrr.yo"></label>
+                <label>Телефон:<br><input type="tel" placeholder="+7... ... .. .." required></label>
                 <button>Отправить<br></button>
+                <p>Нажимая «Отправить» вы принимаете пользовательское соглашение, даете согласие на обработку персональных данных.</p>
         </form>
     </div>
 </body>
