--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <nav class="head-text">
-            <h2 class="name">SKY MOOD</h2>
+            <a href="main.html" class="name"><h2>SKY MOOD</h2></a>
             <ul>
                 <li>Для психологов</li>
                 <li>Для бизнеса</li>
@@ -29,11 +29,39 @@
 
     <div class="main">
         <div class="main-text">
-            <h4>Консультации <br> с психологом онлайн:<br><span class="main-text-blue">повысить качество жизни</span></h4>
+            <h4>Консультации<br>с психологом онлайн:<br>
+                <div>
+                    <span class="main-text-blue">повысить качество жизни</span>
+                    <span class="main-text-blue">найти своё призвание</span>
+                    <span class="main-text-blue">справиться со стрессом</span>
+                    <span class="main-text-blue">наладить отношения<br>с близкими</span>
+                </div>
+            </h4>
         </div>
         <a class="choose_2" href="form.html" target="_blank">Подобрать психолога</a>
     </div>
 
-    <img src="photo_1.jpg" alt="no">
+    <div class="achiev">
+        <div class="achiev-flex">
+            <p id="a"><span class="digits">350 000+</span><br>человек нашли своего психолога онлайн</p>
+            <p id="b"><span class="digits">4 200</span><br>проверенных специалистов</p>
+            <p id="c"><span class="digits">7 лет</span><br>средний опыт практики</p>
+            <p id="d"><span class="digits">81%</span><br>клиентов чувствуют результат после 5-й сессии</p>
+        </div>
+    </div>
+
+    <hr>
+
+    <div class="advant">
+        <h4>С чем <span class="text-blue">поможет</span> психолог?</h1>
+        <div class="advant-grid">
+            <div><img src="advant_1.svg" alt=""> <br> <p>Наладить гармоничные отношения с близкими людьми</p></div>
+            <div><img src="advant_2.svg" alt=""> <br> <p>Справиться со стрессом, тревогой и страхом</p></div>
+            <div><img src="advant_3.svg" alt=""> <br> <p>Принять себя и повысить самооценку</p></div>
+            <div><img src="advant_4.svg" alt=""> <br> <p>Научиться говорить «нет» и отстаивать личные границы</p></div>
+            <div><img src="advant_5.svg" alt=""> <br> <p>Пережить перемены: переезд, расставание, потеря работы</p></div>
+            <div><img src="advant_6.svg" alt=""> <br> <p>Понять, почему на работе проблемы и нет мотивации</p></div>
+        </div>
+    </div>
 </body>
 </html>
