финал, ренейм на index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,56 @@
             <div><img src="advant_5.svg" alt=""> <br> <p>Пережить перемены: переезд, расставание, потеря работы</p></div>
             <div><img src="advant_6.svg" alt=""> <br> <p>Понять, почему на работе проблемы и нет мотивации</p></div>
         </div>
+        <a class="choose_3" href="form.html" target="_blank">Хочу обсудить свою ситуацию</a>
     </div>
+
+    <div class="video">
+        <h4>Развееваем <span class="text-blue">мифы</span> о психологах:</h1>
+        <iframe
+            width="720"
+            height="405"
+            src="https://rutube.ru/play/embed/f73ad04ed17304b6a4ca0bf5c76dc5cf"
+            frameBorder="0"
+            allow="clipboard-write; autoplay"
+            webkitAllowFullScreen
+            mozallowfullscreen
+            allowFullScreen
+        ></iframe>
+    </div>
+
+    <footer class="basement">
+        <div class="basement-flex">
+            <p>
+                <span class="basement-main-text">Ещё</span><br>
+                Подарочные сертификаты<br>
+                Правила акций<br>
+                Пользовательское соглашение<br>
+                Обработка персональных данных<br>
+                Согласие на обработку
+            </p>
+            <p>
+                <span class="basement-main-text">Полезное</span><br>
+                Каталог психологов<br>
+                Услуги психологов<br>
+                Бесплатная помощь<br>
+                Психологические тесты<br>
+                Статьи о психологии
+            </p>
+            <p>
+                <span class="basement-main-text">О, Sky Mood</span><br>
+                Вопросы-ответы<br>
+                Отзывы клиентов<br>
+                Контакты<br>
+                Вакансии<br>
+                Ясно для бизнеса
+            </p>
+            <p>
+                © 2025 Sky Mood<br>
+                Включено в единый<br>
+                реестр российских<br>
+                программ
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
