--- a/form.html
+++ b/form.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Sky Mood</title>
-    <link rel="stylesheet" href="style-form.css">
+    <link rel="stylesheet" href="css/style-form.css">
 </head>
 <body>
     <header class="header">
         <nav class="head-text">
-            <a href="main.html" class="name"><h2>SKY MOOD</h2></a>
+            <a href="index.html" class="name"><h2>SKY MOOD</h2></a>
             <ul>
                 <li>
                     <a class="choose" href="form.html">Выбрать психолога</a>
