--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sky Mood</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
         <nav class="head-text">
-            <a href="main.html" class="name"><h2>SKY MOOD</h2></a>
+            <a href="index.html" class="name"><h2>SKY MOOD</h2></a>
             <ul>
                 <li>Для психологов</li>
                 <li>Для бизнеса</li>
@@ -55,12 +55,12 @@
     <div class="advant">
         <h4>С чем <span class="text-blue">поможет</span> психолог?</h1>
         <div class="advant-grid">
-            <div><img src="advant_1.svg" alt=""> <br> <p>Наладить гармоничные отношения с близкими людьми</p></div>
-            <div><img src="advant_2.svg" alt=""> <br> <p>Справиться со стрессом, тревогой и страхом</p></div>
-            <div><img src="advant_3.svg" alt=""> <br> <p>Принять себя и повысить самооценку</p></div>
-            <div><img src="advant_4.svg" alt=""> <br> <p>Научиться говорить «нет» и отстаивать личные границы</p></div>
-            <div><img src="advant_5.svg" alt=""> <br> <p>Пережить перемены: переезд, расставание, потеря работы</p></div>
-            <div><img src="advant_6.svg" alt=""> <br> <p>Понять, почему на работе проблемы и нет мотивации</p></div>
+            <div><img src="img/advant_1.svg" alt=""> <br> <p>Наладить гармоничные отношения с близкими людьми</p></div>
+            <div><img src="img/advant_2.svg" alt=""> <br> <p>Справиться со стрессом, тревогой и страхом</p></div>
+            <div><img src="img/advant_3.svg" alt=""> <br> <p>Принять себя и повысить самооценку</p></div>
+            <div><img src="img/advant_4.svg" alt=""> <br> <p>Научиться говорить «нет» и отстаивать личные границы</p></div>
+            <div><img src="img/advant_5.svg" alt=""> <br> <p>Пережить перемены: переезд, расставание, потеря работы</p></div>
+            <div><img src="img/advant_6.svg" alt=""> <br> <p>Понять, почему на работе проблемы и нет мотивации</p></div>
         </div>
         <a class="choose_3" href="form.html" target="_blank">Хочу обсудить свою ситуацию</a>
     </div>
