--- a/form.html
+++ b/form.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <div class="form">
-        <form action="">
+        <form>
                 <label>Введите своё имя: <br><input type="text" placeholder="Ваня" required></label>
                 <label>Дата рождения:<br><input type="date" required></label>
                 <label>Ваш пол:<br><select name="Пол?">
